fix: dark mode support for expandable sections in config panel #2668

--- a/packages/dashboard/src/customization/propertiesSections/propertiesSectionsStyle.css
+++ b/packages/dashboard/src/customization/propertiesSections/propertiesSectionsStyle.css
@@ -2,10 +2,6 @@
   overflow: hidden;
 }
 
-.accordian-header > :first-child {
-  background-color: #f8f8f8;
-}
-
 .accordian-header [class*="awsui_expand-button"] {
   padding-left: 8px;
   width: 100%;
